add avatar page

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "build:dev": "vite build --mode development",
-    "build:pro": "vite build --mode production",
+    "build:pro": "vite build --mode production && echo 'Production build completed successfully' && exit 0 || exit 1",
     "serve": "vite preview",
     "plop": "plop",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
