--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/components": "^8.3.1",
     "@vueuse/core": "^8.3.1",
     "axios": "^0.27.2",
+    "mkcert": "^3.2.0",
     "mockjs": "^1.1.0",
     "naive-ui": "^2.28.2",
     "nprogress": "^0.2.0",
@@ -27,6 +28,7 @@
     "plop": "^3.1.0",
     "qs": "^6.10.3",
     "vue": "^3.2.33",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
@@ -35,9 +37,11 @@
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
-    "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-basic-ssl": "^1.0.2",
+    "@vitejs/plugin-vue": "^3.0.0",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "autoprefixer": "^10.4.5",
+    "electron-builder": "^24.9.1",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-define-config": "^1.4.0",
@@ -57,13 +61,14 @@
     "unplugin-auto-import": "^0.7.1",
     "unplugin-icons": "^0.14.1",
     "unplugin-vue-components": "^0.19.3",
-    "vite": "^2.9.6",
+    "vite": "^3.2.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-md": "^0.13.0",
+    "vite-plugin-md": "^0.19.3",
+    "vite-plugin-mkcert": "^1.17.1",
     "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-pages": "^0.23.0",
-    "vite-plugin-restart": "^0.1.1",
+    "vite-plugin-pages": "^0.25.0",
+    "vite-plugin-restart": "^0.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.34.10"
