--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.25.2",
+    "@vicons/ionicons4": "^0.12.0",
     "@vueuse/components": "^8.3.1",
     "@vueuse/core": "^8.3.1",
     "axios": "^0.27.2",
@@ -28,6 +29,7 @@
     "plop": "^3.1.0",
     "qs": "^6.10.3",
     "vue": "^3.2.33",
+    "vue-i18n": "^9.9.1",
     "vue-markdown": "^2.2.4",
     "vue-router": "^4.0.14"
   },
