--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vicons/ionicons4": "^0.12.0",
     "@vueuse/components": "^8.3.1",
     "@vueuse/core": "^8.3.1",
+    "@watermark-design/vue": "^1.3.13",
     "axios": "^0.27.2",
     "mkcert": "^3.2.0",
     "mockjs": "^1.1.0",
@@ -31,7 +32,8 @@
     "vue": "^3.2.33",
     "vue-i18n": "^9.9.1",
     "vue-markdown": "^2.2.4",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "watermark-js-plus": "^1.4.15"
   },
   "devDependencies": {
     "@types/node": "^17.0.29",
