--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "lunarcore-tools",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "author": "moraxs",
   "scripts": {
     "dev": "vite --mode development",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "node build.js",
     "preview": "vite preview",
-    "build:dev": "vite build --mode development",
-    "build:pro": "vite build --mode production && echo 'Production build completed successfully' && exit 0 || exit 1",
     "serve": "vite preview",
     "plop": "plop",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
@@ -22,6 +20,7 @@
     "@vueuse/core": "^8.3.1",
     "@watermark-design/vue": "^1.3.13",
     "axios": "^0.27.2",
+    "gradient-string": "^2.0.2",
     "mkcert": "^3.2.0",
     "mockjs": "^1.1.0",
     "naive-ui": "^2.28.2",
